# jya

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  ruff.toml
.github/workflows/: python-test.yml
hooks/: fix_line_endings.py  generate_init.py
jya/: __init__.py  __init__.pyi  math_utils.py  radiograph.py
